// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Computed Columns Tests should handle basic arithmetic computations 1`] = `
"┌────────┬────────┬─────┬────────────┬─────────┐
│[37m [0m[01mvalue1[0m │[37m [0m[01mvalue2[0m │[37m [0m[01msum[0m │[37m [0m[01mdifference[0m │[37m [0m[01mproduct[0m │
├────────┼────────┼─────┼────────────┼─────────┤
│[37m [0m[37m    10[0m │[37m [0m[37m     5[0m │[37m [0m[37m 15[0m │[37m [0m[37m         5[0m │[37m [0m[37m     50[0m │
│[37m [0m[37m    20[0m │[37m [0m[37m    10[0m │[37m [0m[37m 30[0m │[37m [0m[37m        10[0m │[37m [0m[37m    200[0m │
│[37m [0m[37m    15[0m │[37m [0m[37m     3[0m │[37m [0m[37m 18[0m │[37m [0m[37m        12[0m │[37m [0m[37m     45[0m │
└────────┴────────┴─────┴────────────┴─────────┘"
`;

exports[`Computed Columns Tests should handle computations with row index 1`] = `
"┌───────┬────────┬───────────┬──────────────┐
│[37m [0m[01mvalue[0m │[37m [0m[01mrowNum[0m │[37m [0m[01misEvenRow[0m │[37m [0m[01mrunningTotal[0m │
├───────┼────────┼───────────┼──────────────┤
│[37m [0m[37m   10[0m │[37m [0m[37m     1[0m │[37m [0m[37m       No[0m │[37m [0m[37m          10[0m │
│[37m [0m[37m   20[0m │[37m [0m[37m     2[0m │[37m [0m[37m      Yes[0m │[37m [0m[37m          30[0m │
│[37m [0m[37m   30[0m │[37m [0m[37m     3[0m │[37m [0m[37m       No[0m │[37m [0m[37m          60[0m │
│[37m [0m[37m   40[0m │[37m [0m[37m     4[0m │[37m [0m[37m      Yes[0m │[37m [0m[37m         100[0m │
└───────┴────────┴───────────┴──────────────┘"
`;

exports[`Computed Columns Tests should handle conditional computations 1`] = `
"┌───────┬───────┬────────┐
│[37m [0m[01mscore[0m │[37m [0m[01mgrade[0m │[37m [0m[01mstatus[0m │
├───────┼───────┼────────┤
│[37m [0m[37m   95[0m │[37m [0m[37m    A[0m │[37m [0m[37m  PASS[0m │
│[37m [0m[37m   85[0m │[37m [0m[37m    B[0m │[37m [0m[37m  PASS[0m │
│[37m [0m[37m   75[0m │[37m [0m[37m    C[0m │[37m [0m[37m  PASS[0m │
│[37m [0m[37m   65[0m │[37m [0m[37m    D[0m │[37m [0m[37m  PASS[0m │
│[37m [0m[37m   55[0m │[37m [0m[37m    F[0m │[37m [0m[37m  FAIL[0m │
└───────┴───────┴────────┘"
`;

exports[`Computed Columns Tests should handle custom column titles 1`] = `
"┌────────────┬─────────────┬─────┬─────────────┬──────────────┐
│[37m [0m[01mred_amount[0m │[37m [0m[01mblue_amount[0m │[37m [0m[01msum[0m │[37m [0m[01mRed Percent[0m │[37m [0m[01mBlue Percent[0m │
├────────────┼─────────────┼─────┼─────────────┼──────────────┤
│[37m [0m[31m         2[0m │[37m [0m[37m          3[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │
│[37m [0m[31m         1[0m │[37m [0m[37m          1[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │
│[37m [0m[31m         5[0m │[37m [0m[37m          6[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │
└────────────┴─────────────┴─────┴─────────────┴──────────────┘"
`;

exports[`Computed Columns Tests should handle percentage calculations 1`] = `
"┌────────────┬─────────────┬─────┬─────────────┬──────────────┐
│[37m [0m[01mred_amount[0m │[37m [0m[01mblue_amount[0m │[37m [0m[01msum[0m │[37m [0m[01mred_percent[0m │[37m [0m[01mblue_percent[0m │
├────────────┼─────────────┼─────┼─────────────┼──────────────┤
│[37m [0m[31m         2[0m │[37m [0m[37m          3[0m │[37m [0m[37m  5[0m │[37m [0m[37m      40.00[0m │[37m [0m[37m       60.00[0m │
│[37m [0m[31m         1[0m │[37m [0m[37m          1[0m │[37m [0m[37m  2[0m │[37m [0m[37m      50.00[0m │[37m [0m[37m       50.00[0m │
│[37m [0m[31m         5[0m │[37m [0m[37m          6[0m │[37m [0m[37m 11[0m │[37m [0m[37m      45.45[0m │[37m [0m[37m       54.55[0m │
└────────────┴─────────────┴─────┴─────────────┴──────────────┘"
`;

exports[`Computed Columns Tests should handle row metadata in computations 1`] = `
"┌────────────┬─────────────┬────────────┬────────────┐
│[37m [0m[01mred_amount[0m │[37m [0m[01mblue_amount[0m │[37m [0m[01mRow Number[0m │[37m [0m[01mTotal Rows[0m │
├────────────┼─────────────┼────────────┼────────────┤
│[37m [0m[31m         2[0m │[37m [0m[37m          3[0m │[37m [0m[37m         0[0m │[37m [0m[37m         3[0m │
│[37m [0m[31m         1[0m │[37m [0m[37m          1[0m │[37m [0m[37m         1[0m │[37m [0m[37m         3[0m │
│[37m [0m[31m         5[0m │[37m [0m[37m          6[0m │[37m [0m[37m         2[0m │[37m [0m[37m         3[0m │
└────────────┴─────────────┴────────────┴────────────┘"
`;

exports[`Computed Columns Tests should handle string manipulations 1`] = `
"┌───────────┬──────────┬─────────────┬──────────┐
│[37m [0m[01mfirstName[0m │[37m [0m[01mlastName[0m │[37m [0m[01m   fullName[0m │[37m [0m[01minitials[0m │
├───────────┼──────────┼─────────────┼──────────┤
│[37m [0m[37m     John[0m │[37m [0m[37m     Doe[0m │[37m [0m[37m   John Doe[0m │[37m [0m[37m    J.D.[0m │
│[37m [0m[37m     Jane[0m │[37m [0m[37m   Smith[0m │[37m [0m[37m Jane Smith[0m │[37m [0m[37m    J.S.[0m │
│[37m [0m[37m      Bob[0m │[37m [0m[37m Johnson[0m │[37m [0m[37mBob Johnson[0m │[37m [0m[37m    B.J.[0m │
└───────────┴──────────┴─────────────┴──────────┘"
`;
